# stat362-fa25-final-weather-classification

./: README.md  baseline_model.ipynb  final_model.ipynb  model_attempt2.ipynb  preliminary_model.ipynb  preliminary_model_updated.ipynb  pyproject.toml
